add red styling for admin page

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,9 +1,9 @@
-/* .top-bar {
+.top-bar {
 	background-color: red;
-} */
-.dropdown-menu {
-	color: red;
 }
+/* .dropdown-menu {
+	color: red;
+} */
 
 .cell-card {
 	padding-bottom: 0px;
