--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,66 @@
+body{
+	background-color: #f8e7bb;
+	padding-left: 10px;
+	padding-right: 10px;
+	
+}
+
+.dropdown.menu {
+	background-color: #f8e7bb;
+}
+
+.top-bar, .top-bar-left {
+	background-color: #f8e7bb;
+}
+.menuItem-container{
+	background-color: #f8e7bb;
+}
+.callout {
+	
+	text-align: center;
+	font-family: 'Sigmar One', cursive;
+	margin: 10px; 
+	color: #ea2231;
+	background-color: #f5e124;
+	border: solid black 3px;
+	/* background-clip: content-box;
+	box-shadow: inset 0 0 0 2px black; */
+	outline: solid #ea2231 10px;
+}
+
+h1 {
+	font-family: 'Sigmar One', cursive;
+	text-shadow: black 3px;
+}
+
+.tabMenu {
+	justify-content: center;
+}
+
+li > a {
+	color: black;
+	font-weight: bold;
+	font-size: 50px;
+	font-family: 'Neucha', cursive;
+}
+
+h4 {
+	font-weight: bold;
+	font-family: 'Gloria Hallelujah', cursive;
+}
+.cell-header{
+	font-weight: bold;
+	font-family: 'Gloria Hallelujah', cursive;
+	background-color: #777b84;
+	color: white;
+	border: solid rgb(204, 71, 81) 10px;
+}
 .cell-card {
 	padding-bottom: 0px;
 }
 
 .card-divider {
+	background-color:#777b84;
 	padding-bottom: 0px;
 }
 
@@ -10,7 +68,61 @@
 	margin: 5px;
 }
 
+
+#modalCart{
+	padding: 5px;
+	background-color: #a47c2d;
+}
+
+h2{
+	font-family: 'Sigmar One', cursive;
+}
+
+th, td, tr {
+	text-align: center;
+	background-color: #c3a840;
+	border: solid black 1px;
+}
+/* 
+.submitOrderForm {
+	background-color: #c3a840;
+} */
+
+input.button {
+	background-color: #4569a4;
+	border: solid black 1px;
+}
+
+button {
+	border: solid black 1px;
+	background-color: #4569a4;
+
+}
+
+.close-button{
+	background-color: transparent;
+	border: transparent;
+	color: black;
+}
+
+.close-button:hover{
+	
+	border-color: transparent;
+}
+
 .totalAmount {
 	color: brown;
 	font-weight: bold;
 }
+
+
+
+
+
+
+
+/* font-family: 'Amatic SC', cursive;
+font-family: 'Gloria Hallelujah', cursive;
+font-family: 'Luckiest Guy', cursive;
+font-family: 'Neucha', cursive;
+font-family: 'Sigmar One', cursive; */
